Fixed search box size on tablet and mobile

--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -67,7 +67,6 @@
     line-height: 38px;
     padding-left: 40px;
     width: 100%;
-    height: 100%;
   }
 
   .search-expanded .head-icon {
